[package]
authors = ["vpzomtrrfrt"]
name = "tuxparty"
version = "0.1.0"

[dependencies]
gilrs = "0.5.1"
image = "0.17.0"
piston = "0.35.0"
piston2d-graphics = "0.23.0"
piston2d-opengl_graphics = "0.49.0"
pistoncore-sdl2_window = "0.46.0"
rand = "0.3.18"
ears = "0.4.0"
lazy_static = "1.0.0"
find_folder = "0.3.0"
